syntax = "proto3";
option java_multiple_files = true;
option java_package = "shopping.cart.proto";

package shopping.cart;

//gRPC definition for ShoppingCartService

service ShoppingCartService {
  rpc AddItem (AddItemRequest) returns (Cart) {}
  rpc Get (GetCartRequest) returns(Cart) {}
  rpc Checkout(CheckoutRequest)returns(Cart){}
  rpc GetItemPopularity(GetItemPopularityRequest)returns(GetItemPopularityResponse){}
}

message AddItemRequest {
  string cartId = 1;
  string itemId = 2;
  int32 quantity = 3;
}
message GetCartRequest{
  string cartId = 1;
}
message CheckoutRequest{
  string cartId = 1;
}
message GetItemPopularityRequest{
  string itemId = 1;
}
message GetItemPopularityResponse{
  string itemId = 1;
  int64 popularity = 2;
}
message Cart {
  repeated Item items = 1;
  bool isCheckedOut = 2;
}
message Item {
  string itemId = 1;
  int32 quantity = 2;
}